--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,12 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
+    ''
+    viewBinding{
+        enabled = true
+    }
+    ''
+
     defaultConfig {
         applicationId "castlebomber.richie.threepassages"
         minSdkVersion 27
